SF Primes/src/objects/Site_Optimization_Focus_Areas__c.object
<CustomObject>
    <description>This is used by Services management to edit and create focus areas that are used by several services groups during website optimization teaming calls and strategies.</description>
    <fields>
        <fullName>Category__c</fullName>
        <inlineHelpText>The Category field will update the Focus Area Name.</inlineHelpText>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Advertising Optimization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Setting Expectations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Understanding Dealer Goals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website Optimization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Why Cobalt?</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Focus_Area__c</fullName>
        <inlineHelpText>Each item listed should be reviewed by the Account team.</inlineHelpText>
        <label>Focus Area</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Objective__c</fullName>
        <inlineHelpText>This is the objective of the Focus Area.  For example:  We need to set up the dealer up for a successful launch of their Digital Advertising Package.</inlineHelpText>
        <label>Objective</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Recommended_Timing__c</fullName>
        <inlineHelpText>Please choose which call this focus area should be used on.</inlineHelpText>
        <label>Recommended Timing</label>
        <picklist>
            <picklistValues>
                <fullName>Onboarding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1st Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2nd Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3rd Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4th Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5th Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ongoing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Site Optimization Focus Areas</label>
    <listViews>
        <fullName>All_Focus_Areas</fullName>
        <columns>NAME</columns>
        <columns>Recommended_Timing__c</columns>
        <columns>Objective__c</columns>
        <columns>Focus_Area__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Focus Areas</label>
        <sharedTo>
            <role>AccountAdvocateDirector</role>
            <role>AccountAdvocateManager</role>
            <role>DigitalMarketingServicesDirector</role>
            <role>IFSDirector</role>
            <role>IFSManager</role>
            <role>OnlineMarketingManager</role>
            <role>OwnerMarketingServicesManager</role>
            <role>ReputationManagementManager</role>
            <role>SEOOrganicSearchManager</role>
            <role>ServiceOps</role>
            <role>ServiceOpsManager</role>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Focus Area Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Site Optimization Focus Areas</pluralLabel>
    <recordTypes>
        <fullName>DAP_Focus_Areas</fullName>
        <active>true</active>
        <label>DAP Focus Areas</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CB_DAPFA_CategoryAndNameMustMatch</fullName>
        <active>true</active>
        <description>Stops user from editing the focus area name field unless it&apos;s on record creation.</description>
        <errorConditionFormula>AND(
Not(Isnew()),
NOT(BEGINS($User.Username,$Setup.GlobalSettings__c.Admin_Integration_Username__c)), 
Text( Category__c )&lt;&gt;  Name ,
Not(ischanged(Category__c))
)</errorConditionFormula>
        <errorDisplayField>Category__c</errorDisplayField>
        <errorMessage>Please change the Category field in order to update the Focus Area Name.</errorMessage>
    </validationRules>
</CustomObject>